--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-offcanvas": "^0.4.0",
