--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "start": "node index.js",
+    "test": "mocha -w ./tests/**/*.spec.js",
+    "dev": "nodemon -L"
   },
   "author": "Henry",
   "license": "ISC",
@@ -26,7 +27,6 @@
     "jwks-rsa": "^2.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.2"
