--- a/api/package.json
+++ b/api/package.json
@@ -21,11 +21,13 @@
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "express-jwt-authz": "^2.4.1",
+    "googleapis": "^87.0.0",
     "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
