--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
+    "i18next": "^21.0.1",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
     "react-icons": "^4.2.0",
     "react-offcanvas": "^0.4.0",
     "react-redux": "^7.2.4",
