--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,17 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
-    "material-table": "^1.69.3",
+    "material-table": "^1.63.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
-    "react-dev-utils": "^11.0.4",
+    "react-dev-utils": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-offcanvas": "^0.4.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
@@ -54,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chokidar": "^3.5.2"
   }
 }
