--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-star-rate": "^0.2.0",
+    "react-stars": "^2.2.5",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
