--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-stars": "^2.2.5",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
